fix: no horizontal scroll bar on tables

--- a/src/index.scss
+++ b/src/index.scss
@@ -133,4 +133,6 @@ pre {
 
 .md-table-pagination--controls {
   position: relative !important;
+  float: right;
+  margin-left: 0 !important;
 }
